<?xml version="1.0"?>

<resources>

    <string name="app_name">InSureApp</string>
    <string name="welcome">Welcome to the InSure app!</string>
    <string name="InSureDescription">InSure Logo</string>
    <string name="select">Select the option you want to perform:</string>
    <string name="customerInfo">Customer Information</string>
    <string name="newClaim">New claim</string>
    <string name="claimHistory">Claim history</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Back">Back</string>
    <string name="Submit">Submit</string>
    <string name="create_a_new_claim">Create a new claim</string>
    <string name="title">Title</string>
    <string name="car_s_plate_number">Car\'s plate number</string>
    <string name="please_describe_your_claim">Please describe your claim:</string>
    <string name="registered_claim">Claim</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="this_is_the_customer_s_information">This is the customer\'s information</string>
    <string name="fiscal_number">Fiscal Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="insurance_policy_number">Insurance Policy Number</string>
    <string name="adress">Adress</string>
    <string name="ok"> OK </string>
    />

</resources>