<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerInformationActivity"
    android:background="@drawable/three">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="106dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="9dp"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/this_is_the_customer_s_information"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076" />

        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:background="#B9F6CA"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/Back"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.843" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.048" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="319dp"
            android:layout_height="35dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textShortMessage"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:layout_constraintVertical_bias="0.04" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="319dp"
            android:layout_height="35dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textShortMessage"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:layout_constraintVertical_bias="0.264" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="125dp"
            android:layout_height="26dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/fiscal_number"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:layout_constraintVertical_bias="0.172" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="125dp"
            android:layout_height="26dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/adress"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:layout_constraintVertical_bias="0.387" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="125dp"
            android:layout_height="26dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/date_of_birth"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:layout_constraintVertical_bias="0.605" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="226dp"
            android:layout_height="23dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/insurance_policy_number"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.167"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:layout_constraintVertical_bias="0.823" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="323dp"
            android:layout_height="40dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="321dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintVertical_bias="0.771"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="323dp"
            android:layout_height="44dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintVertical_bias="0.212"
            android:autofillHints="" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>