<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateClaimActivity"
    android:background="@drawable/three">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="106dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="9dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/create_a_new_claim"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:background="#B9F6CA"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/Back"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.219"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.484"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:background="#FFE57F"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/Submit"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.662"
            app:layout_constraintStart_toStartOf="@+id/BackButton"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.484"
            tools:ignore="UnknownId" />


        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/title"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.089"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="319dp"
            android:layout_height="35dp"
            android:ems="10"
            android:inputType="textShortMessage"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:layout_constraintVertical_bias="0.055"
            android:autofillHints=""
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="125dp"
            android:layout_height="26dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/car_s_plate_number"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            app:layout_constraintVertical_bias="0.247"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="324dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toTopOf="@+id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintVertical_bias="0.227"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/please_describe_your_claim"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.315"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="320dp"
            android:layout_height="164dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textLongMessage"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.932"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>